# ChangeLog for app-portage/layman
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.233 2015/05/02 09:03:46 jer Exp $

  02 May 2015; Jeroen Roovers <jer@gentoo.org> layman-2.3.0.ebuild:
  Marked ~ppc64 (bug #539366).

  25 Apr 2015; Mike Gilbert <floppym@gentoo.org> layman-9999.ebuild:
  Switch to anongit.gentoo.org.

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> layman-2.0.0-r1.ebuild,
  layman-2.0.0-r3.ebuild:
  Remove old Python implementations

  27 Mar 2015; Devan Franchini <twitch153@gentoo.org> layman-9999.ebuild:
  Removes invalid dtest.py testing in favor of the external.py test suite

  18 Feb 2015; Sergey Popov <pinkbyte@gentoo.org> layman-2.3.0.ebuild:
  Add ~s390 keyword, wrt bug #539366

  18 Feb 2015; Joshua Kinard <kumba@gentoo.org> layman-2.3.0.ebuild:
  Added ~mips, #539366.

  11 Feb 2015; Jeroen Roovers <jer@gentoo.org> layman-2.3.0.ebuild:
  Marked ~hppa (bug #539366).

  10 Feb 2015; Brian Dolbec <dolsen@gentoo.org> layman-2.3.0.ebuild:
  Add ssl-fetch to DEPEND due to needing to import setup.py in the prepare
  phase.

*layman-2.3.0 (08 Feb 2015)

  08 Feb 2015; Brian Dolbec <dolsen@gentoo.org> +layman-2.3.0.ebuild,
  layman-9999.ebuild:
  Version bump. Add portage plugin USE flag and installation to layman-9999.

  17 Jan 2015; Patrick Lauer <patrick@gentoo.org> layman-2.2.0-r7.ebuild:
  Fix #525896, tests now actually run and fail

*layman-2.2.0-r7 (12 Jan 2015)

  12 Jan 2015; Devan Franchini <twitch153@gentoo.org>
  +files/layman-2.2.0-change-for-upstream-ssl-fetch.patch,
  +layman-2.2.0-r7.ebuild, -layman-2.2.0-r6.ebuild,
  files/layman-2.2.0-adds-kwargs-debug.patch:
  Adds patch to bring layman-2.2.0 up to date for ssl-fetch, bug #536280

*layman-2.2.0-r6 (12 Jan 2015)

  12 Jan 2015; Devan Franchini <twitch153@gentoo.org>
  +files/layman-2.2.0-adds-kwargs-debug.patch, +layman-2.2.0-r6.ebuild,
  -layman-2.2.0-r5.ebuild: