@@ -16,14 +16,24 @@ EBUILD layman-2.0.0-r1.ebuild 1780 SHA256 d856956e4586f9b59cdfd7a4943114b2e423af
 EBUILD layman-2.0.0-r3.ebuild 1820 SHA256 605f642c84a81ba6a30d9885a4bee0aad6bd5309727403bc31e37211d676678e SHA512 3d05d08bec49b89dda164b7091d6e64f91bb403022286c7f826378dd2db66e5536608e1e7baae2f1bd6cc9529033f8a427316fe4efdd0054730ae9ca7d106ccf WHIRLPOOL b0b226a682e3a6bc6cf19dc6704d4ce8dd9288678f981e1a59dfc9262a8f4d514a3da20dcdaa04a1037b8eabb67732a2b2e445bbb548ceec7b1792a5bb5ba722
 EBUILD layman-2.1.0-r3.ebuild 1931 SHA256 b01c456a1e2ee8c83f26accf7af019995ef5a23d988670ca2e04392a4cd0bc2a SHA512 81d4ea0e4663fb303a6846cf4e552e0dc684a88464c077ed2449c7973e981115804f30b479e3c7eec89a9885052b8422c0a1b9583ba8889e6c8b0eeda0b6467f WHIRLPOOL d5cee46f3d9c6a9c8038d2a08bebb0d28c2363dc59f7f9bcaf10a850e201ad70b6caa835d62ef0eca5bc9acc8018a9904b4ce24ea7cd174cb49e1bf88b8ea6b2
 EBUILD layman-2.2.0-r7.ebuild 2334 SHA256 231039e38858c8ffeb2693ed462781e64c91ed0b9adca39f2198eade237a0c68 SHA512 baa8cf68a7ca0f0b8b92fedf0f909905d6fad51a4fe6b29eeed119ccbe256b8c09e82ff6cfcecbf237bcbad43b205380808c4e037b73d4c5dc6e80ec0d4c57e6 WHIRLPOOL 1950adc38a7002d4895fee09db91af98a1dfb3e7304bdc66cd67b3d42cc8dd59ba563fbd603006a873838eb9f4f4705fff3036322ef66fded2e806c70c655252
-EBUILD layman-2.3.0.ebuild 2182 SHA256 1bf82e518d95b6ca5cf6be0d7f7ddb07e9806251f88f41c720e16c37604f02f0 SHA512 6724aad8b206e4afa7c6e9fc7bcd951e1bb019aa18c2b52ea667add4764122823b1f6951e110193819bb587fe9cad79193b0f860a539dedc79c46a1d2faeafa2 WHIRLPOOL a0bd195a841a7a5c1775454a8de89c762e8e7a18939a8240df1b8ac6e94691bab9d40d984ac4b4fa81c23c64e3d67105555bfe10861389005ceea21d06eb9f3a
+EBUILD layman-2.3.0.ebuild 2192 SHA256 f4d506c73be18a1709c3416c6b114a6e2b6f67dc599d3e508016494438e9e5da SHA512 7d0307de9fc6fc13de7d430fc61854ac4164504fd05f7ef2ace40521d47ff6c7cc8e1d0482d8045c384a2232d4ae74d550fef07a6bb225295eb4fc15dd688aee WHIRLPOOL 1f2909c32da1f5a36d821d86d9755d1e79f2aeee38ea10412d2fbfc98ad8e74a5bf59f488ff955727aaf2d0ea57ea2701406f5d442d165d38fb1eb9f32e36685
 EBUILD layman-9999.ebuild 2193 SHA256 b8e93a20a08809bfcc420f13b1d5157cb48bbc2456efa93735d1713919eb4271 SHA512 3460064d3b98c679fe01d245d0526049bc3c0ef791228d1b16377f2369985462d5a0f9649109d4e8350ff0f0ec560711d5dde267ba8dde34a3d42b7c894efb9f WHIRLPOOL 63228548a2ce8a22e8e66ccb6384844a65c6e747cac216052943d672c79d251c66a21ab687559ac32f74a9d681cf074d0ee34bae26db278c79c137ad0f6b8fe5
-MISC ChangeLog 34908 SHA256 1322c8c481bca4b9befdddeb204772e9f556c10bdcea77ed2d0a9665d39e21a5 SHA512 6aa3247ba3384e0b2dd161b6548398ab848a24e12a66bff5dd7ee9785943f22bcb7f2c8adb4fab7fe306322876d768e3f16f91267d9debca311f76d5ab1f404f WHIRLPOOL 69bbaa46f80ab586d97694522972dee5abb6ae9b39dd585421513abe1eb1b19548ec9225fe07c58051a1a14fc402096a3b12fd7cc37a3506e902abc550e80cea
+MISC ChangeLog 35022 SHA256 ba4d39fe1b54be1b5d7ea97b48c001c76afe95912e07224528e5d21fe6a960af SHA512 b6bc46dda4a3b7955259feab2a2afa4cebe234e81712f7ed3e6faff22c0b0b6b74eaef3833abe3408a95a3e2732fa34fb6f22ede1ffda0b396f8a3cf07b5b208 WHIRLPOOL efd967d248b8f245c1a2c2fbb99ff7784206d0d0697f62c627bc01005fda9212fdd7088f5ebd9982acf3ba6af5f16ccac0fb42597e6a078bb0c3af1a9bbebdbf
 MISC metadata.xml 1206 SHA256 91ecca0f2e8a69033cb48416df21f41ef72bbb36a290d76f6339759f5a5ddf90 SHA512 536aacb83998f905b5c6525e4d6e633ec970552b2d3e87897b14f8b64f40c19036f21d8f2f4687ae90bd4ccf341efec0f5c3cd4d002121998522894c2ab9e62d WHIRLPOOL 5f109b206942a9dcf045d521e7acc40f5f81a9d6a1f1679ebc308b44b94eac84ffaa558bfaba817a8ac0e4d019d902a030cd0e493b7eed177d81867470c01897
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVEkvMACgkQVWmRsqeSphMzUgCdE4klUyl0M0F/BnBh6Hss5I1l
-ECYAnjpRlUrbpi+b+wmkNWdM/LgYYmTW
-=utQR
+iQIcBAEBCAAGBQJVS4ymAAoJEJOE+m71LUu6NQYQALVI2+iFS/bnNHacqabs4aKL
+lsvxvAM6XcJ+OXMyS/sb6yQcp29BglEMFAYcT5rOWFaZXzRT067mWcfM1LJB1hBG
+Jb6pmiuYZ/n7WG/i8q6ZOAn8d5/Tsquafroa4pPjR9jDn+1YG339UNXVSYeXgI0Z
+qAAyzfCccWvav20JxcJojShfTBsHJa1r182O9rYYyQwVspk3QIxCl/i3Q/DC9dIV
+kb+o9sbM14rllQKPv5cQK418r1CaeXA8DyPOOULhZUiIO1X6gfeR73vWNwn/QGuC
+3BsHtMWsyFejF0Pu1MiFngcoJtn6PQ2faYYg3DCmxwj4CA5oK754CbI9+Q3J47cs
+0Boabdk78PhZA1pkMEZneDaB6aFny/prJObdGzQfr9io8+54Prb74qzyqJOQsujP
+/6l+YrKnWvuGz6VOHLTy8zAuQHj37O043AzxUR7hFzG5JFWFRtxaDNh5lcso1YhB
+UfXkXK0Tvx6PVM9ShePksrm6KstR/fVnoXnl4G2m/Znht8P+lIVj/Cl80UzQ7lfi
+NGqbswNRv060pzoEUsZiOyDECbrVI4O4cOIppPziHwYZAk+mSDld/CVYrhyKp8VY
+vWA3FW9iEX6sBPYyCyvepbxrJjk03TfvaiX+zKPxwyjzh4hp/bXj2tcw18IkdQC2
+SluaIqNfH2mwjTg+fJDP
+=t4Fy
 -----END PGP SIGNATURE-----
