@@ -2,14 +2,24 @@
 Hash: SHA256
 
 DIST pyGPG-0.1.tar.gz 15441 SHA256 c699192606652ebe1a369770d00110baa490c74c3d858ad0513ec55f315e7735 SHA512 58a89fbee4311b89c5515ad1bc1d901057e8acdfdbcf36813f50a766374100a62efe456d52263711e5c2f46957791def9343d94f019e413506cfdbd353602060 WHIRLPOOL 24862897737516945cdc8e41ced589f4ef4b64cdd4a92ddae22c07e9252c0cf8779b685b6cd35fac5b3244d0000d9bade98d661c67ac904639ebc142281551c1
-EBUILD pyGPG-0.1.ebuild 1126 SHA256 5b81b4ed67d0cbbe6fb54cdebe1bb5b410eab42a9dd3c209f8dffd4c79651189 SHA512 2fab7c2a60eb2e593a0ce4f1ea61eb6aabcb41c39e42c8fc8f5792d45276b169e31593cac9a4e79398bad369150319732a21e626396ab47f7d098458bc14aeef WHIRLPOOL 746d14402bc53d4b1d82cc8786f24f9c95b4fb701bc27baa4d3a33feccda66e9a0e476efd4cae989e606e92a5ce07b315c10d21a807350b904690b95fa099a59
+EBUILD pyGPG-0.1.ebuild 1136 SHA256 5894091195abe4aec2e36886a46e7bdc4d2371ed7184fb3f491dc5bf3effca6b SHA512 0228c938f160f35c9f1ba2b44126a85d1ab6d9ae95b1d276aad9c75ae63fa864aea8448ee873981e0a7fc36abb45f836c3301da250924feb427adc021246de58 WHIRLPOOL 92a53b3a60dd6f62e39d7d26119ccd4a710083e9a81f67e92697e3d125b7e00c61471d5563b7f029ac48a5fee2d8cda8adf5df13ec171bf58e5d834105320aa4
 EBUILD pyGPG-9999.ebuild 1130 SHA256 3febe6dc61c3539d9948b1061e3eb61844d93580bcf86e18c27e693783265893 SHA512 9ac97bdccd9f0fa9c61fd69bc5a84b05518cc0ad136752081a16876d9473d8e26d9a416757b34ec215b96b20dfc435aadbe954b828eb4aff107dbc0c0f337b3c WHIRLPOOL e25a93167259f584f9219bbcb29d19e5c4ecaf081f3792aaed5ef0c6c9ad97af40f71b3605e0f190a43747f3be1d52f7c5531803c4a8e46d5b755d8c40cd1752
-MISC ChangeLog 1454 SHA256 725bbce8cd2b12cb09552883b294c25944c3ecdea2f518ec7954923a9dcf7d4f SHA512 91de7810b5a408acc59c9bb35846ba54bb3de9d876b40c61a75a26de7e855852788dbe5fa882887243e456b674ea1153cb08fbf4d0df8ff3c820b7d71d161523 WHIRLPOOL 692cbc24d9b8efcd4fbc6d9f53b854cd39779488b2d2b0bac08ea318d5bbb378e3225ca4465f45e569a3a2c589eb5761d70d29da87d7a2b21525843dcfec9ced
+MISC ChangeLog 1586 SHA256 b412656d94cc12c25d26955ae4101435cc2307bc812236853117c2f519ed3b8e SHA512 a54cf6e1ca9db514915d726c758a5c4e83fb28dd27ac3a05a0bc3a2a5bb87cd653257fdea090669062f8fb8f45ae1c529c1382b933c3cbe9c2017f2c10f63878 WHIRLPOOL d747b838d2c4a5d38b3cebf1dfe5197e27780eb91f7e5e4e1416f1da48c89025ae2cabc1e770115486628bcf2974f3b6527044712a64fb6281f2aa883ff76102
 MISC metadata.xml 481 SHA256 09020a8c3bd6bfdaa05d879c318e83d5740c5d873f2b4c8c9988023d5ed7a61b SHA512 f8876a25bb319e145d8c3c13aa99cfa1698fd00b2f28d231cbd35821a00f7133c4a8ef90afcc973d65813a70aaf2e91ce9231a2d63e9f45b3fb1510f0b19bf5a WHIRLPOOL 4fc1c5a25baa43463273b921eaaaa92cdf65e6381bf32f1e694284236fc308142dcb624f81804ea6258dcf3d0fb94b0d54481c3e9e42a3d110c3564171ce9b3d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVEksUACgkQVWmRsqeSphMJegCeIxW56RP/YV0D4w/22SqW0XTk
-gVIAnRA+U1Rrd1d1cU06q8888cTXd7fl
-=0kZc
+iQIcBAEBCAAGBQJVS4w7AAoJEJOE+m71LUu6/ksP/2l+B+PQpUJPYHfj9E8iT7ZD
+0PICIlwYKPlpU1Z5db3uwgjRhRqLK6RrhXGseSgz6r4UBB8OG6Tm6H4Z/ipD6sQv
+G8AtC8UR4PEydvfttLzyoKGu1yslcczOZeqzYxjg+izFLmTzFlwCdZFdnBhbaIxw
+nGOdku8D64Q/ATHfHJdpWySmllYtR4U5HCHhYi3C5W0DFwxR4P9NZziiX2pJclyB
+KbtxTccbL23OSPOL6EFEM+eix4C0kuNlhUlaCnuxO3NbEN6PiUEEAIFF1IF5AMqC
++Fy1qLWwREeN53LV70ft/TSo8fTbJwb7vpObcKKLbHsCK5ka6VodDj/AYh8Xbz9a
+GsC5PW6GTEwV2PWrTHK/5v0ECxbCGYo0NstuMT21YPHNOi8/jgbDos16k+fTWS6S
+TCoA5bmtomEyyQYFTnOEtkZWYD/XWAnESmtqjQWYuNmADFGyEkgTfwojRWh8In0E
+L7+8oDM5KzcqWhpHklxJ/ihMQhYKpxpgy17I7ARDYgJ6laKiQyL6YkOZsPehS2KV
+OcUjNgDFwB5Q4xgOmJKVphmLMEobn143TX/QmBEExTwAwbMYav+9YkDncDc1zLkO
+8f2eDHlDVSczfsgGpdH5p0VlWfOuhsREtKyCIk3BU24kU1h2W+9DuiOPp6+zL5W7
+TiKt9AxANhUdQSVNtf1r
+=h4nJ
 -----END PGP SIGNATURE-----
