@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyGPG
 # Copyright 2012-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyGPG/ChangeLog,v 1.11 2015/05/02 09:02:59 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyGPG/ChangeLog,v 1.12 2015/05/07 16:00:49 blueness Exp $
+
+  07 May 2015; Anthony G. Basile <blueness@gentoo.org> pyGPG-0.1.ebuild,
+  pyGPG-9999.ebuild:
+  Keyworded ~ppc.  Bug #539366.
 
   02 May 2015; Jeroen Roovers <jer@gentoo.org> pyGPG-0.1.ebuild:
   Marked ~ppc64 (bug #539366).
