@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.233 2015/05/02 09:03:46 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.234 2015/05/07 16:02:30 blueness Exp $
+
+  07 May 2015; Anthony G. Basile <blueness@gentoo.org> layman-2.3.0.ebuild:
+  Keyworded ~ppc.  Bug #539366.
 
   02 May 2015; Jeroen Roovers <jer@gentoo.org> layman-2.3.0.ebuild:
   Marked ~ppc64 (bug #539366).
